cloudformation/ec2/ec2_custom_v2.json
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Description":"AWS CloudFormation Sample Template VPC_EC2_Instance_with_EIP_and_Security_Group: Sample template showing how to create an instance with an Elastic IP address and a security group in an existing VPC. It assumes you have already created a VPC. **WARNING** This template creates an Amazon EC2 instance. You will be billed for the AWS resources used if you create a stack from this template.",
   "Parameters":{
      "KeyName":{
         "Description":"Name of an existing EC2 KeyPair to enable SSH access to the instance",
         "Type":"String",
         "Default":""
      },
      "VpcId":{
         "Type":"String",
         "Description":"VpcId of your existing Virtual Private Cloud (VPC)",
         "Default":""
      },
      "SubnetId":{
         "Type":"String",
         "Description":"SubnetId of an existing subnet in your Virtual Private Cloud (VPC)",
         "Default":""
      },
      "SSHLocation":{
         "Description":" The IP address range that can be used to SSH to the EC2 instances",
         "Type":"String",
         "MinLength":"9",
         "MaxLength":"18",
         "Default":"0.0.0.0/0",
         "AllowedPattern":"(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
         "ConstraintDescription":"must be a valid IP CIDR range of the form x.x.x.x/x."
      },
      "InstanceType":{
         "Description":"WebServer EC2 instance type",
         "Type":"String",
         "Default":"t2.large"
      }
   },
   "Mappings":{
      "RegionMap":{
         "us-east-1":{
            "AMI":"ami-05801d0a3c8e4c443"
         },
         "us-west-1":{
            "AMI":"ami-951945d0"
         },
         "us-west-2":{
            "AMI":"ami-003634241a8fcdec0"
         },
         "eu-west-1":{
            "AMI":"ami-24506250"
         },
         "sa-east-1":{
            "AMI":"ami-3e3be423"
         },
         "ap-southeast-1":{
            "AMI":"ami-74dda626"
         },
         "ap-southeast-2":{
            "AMI":"ami-b3990e89"
         },
         "ap-northeast-1":{
            "AMI":"ami-dcfa4edd"
         }
      }
   },
   "Resources":{
      "InstanceSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "VpcId":{
               "Ref":"VpcId"
            },
            "GroupDescription":"Enable SSH access via port 22",
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"22",
                  "ToPort":"22",
                  "CidrIp":{
                     "Ref":"SSHLocation"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"80",
                  "ToPort":"80",
                  "CidrIp":{
                     "Ref":"SSHLocation"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"9000",
                  "ToPort":"9000",
                  "CidrIp":{
                     "Ref":"SSHLocation"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"9090",
                  "ToPort":"9090",
                  "CidrIp":{
                     "Ref":"SSHLocation"
                  }
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3000",
                  "ToPort":"3000",
                  "CidrIp":{
                     "Ref":"SSHLocation"
                  }
               }
            ],
            "SecurityGroupEgress":[
               {
                  "IpProtocol":"-1",
  "CidrIp": "0.0.0.0/0"
               }
            ]
         }
      },
      "Ec2Instance":{
         "Type":"AWS::EC2::Instance",
         "Properties":{
            "ImageId":{
               "Fn::FindInMap":[
                  "RegionMap",
                  {
                     "Ref":"AWS::Region"
                  },
                  "AMI"
               ]
            },
            "SecurityGroupIds":[
               {
                  "Ref":"InstanceSecurityGroup"
               }
            ],
            "SubnetId":{
               "Ref":"SubnetId"
            },
            "InstanceType":{
               "Ref":"InstanceType"
            },
            "KeyName":{
               "Ref":"KeyName"
            },
            "UserData":{
               "Fn::Base64":{
                  "Fn::Join":[
                     "",
                     [
                        "#!/bin/bash -xe\n",
                        "sudo apt-get update\n",
                        "sudo wget 'https://raw.githubusercontent.com/srimanchiru/graylogk/master/graylog/graylog.sh'\n",
                        "sudo sh /graylog.sh\n",
                        "sudo wget 'https://raw.githubusercontent.com/srimanchiru/graylogk/master/Grafana.sh'\n",
                        "sudo sh /Grafana.sh\n",
                        "sudo wget 'https://raw.githubusercontent.com/srimanchiru/graylogk/master/prometheus.sh'\n",
                        "sudo sh /prometheus.sh\n",
                        "sudo wget 'https://raw.githubusercontent.com/srimanchiru/graylogk/master/nagios.sh'\n",
                        "sudo sh /nagios.sh\n"
                     ]
                  ]
               }
            }
         }
      }
   },
   "Outputs": {
        "WebsiteURL": {
            "Description": "URL for newly created GrayLog stack",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "http://",
                        {
                            "Fn::GetAtt": [
                                "Ec2Instance",
                                "PrivateIp"
                            ]
                        }
                    ]
                ]
            }
        }
   }
}
